Sat Aug 30 01:37:20 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI#initialize): remove unused constants.  a patch
	  from Takeyuki Fujioka in [ruby-dev:36046].

Fri Aug 29 22:29:41 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c ({nucomp,numeric}_rect): new.

	* complex.c: added some aliases
	  (::rectangular, ::rect, #rectangular, #rect, #phase,
	  #magnitude).

	* complex.c (string_to_c_internal): should not strip any null
	  bytes.

	* rational.c (string_to_r_internal): ditto.

	* rational.c (i_gcd): reverted to nurat 0.0.2's one.

	* numeric.c: added an alias (#magnitude).

	* bignum.c: ditto.

	* test/ruby/test_complex.rb: added assertions.

	* test/ruby/test_rational.rb: ditto.

Fri Aug 29 19:46:02 2008  Koichi Sasada  <ko1@atdot.net>

	* gc.c, include/ruby/ruby.h: rename T_DEFERRED to T_ZOMBIE.

Fri Aug 29 18:22:27 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_compatible_p): raise TypeError when argument is not
	  String nor Regexp.

Fri Aug 29 18:20:56 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_index_m): only regexp uses byte offset.

	* string.c (rb_str_rindex_m): ditto.

Fri Aug 29 16:48:34 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method): copy arguments to allocated
	  memory from machine stack.  [ruby-dev:36028]

	* KNOWNBUGS.rb, bootstraptest/test_method.rb: move fixed test.

Fri Aug 29 12:19:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_x509attr.c (ossl_x509attr_initialize): fix for
	  initialization of r18168.

	* ext/openssl/ossl_ocsp.c (ossl_ocspreq_initialize): ditto.

	* ext/openssl/ossl_x509name.c (ossl_x509name_initialize): ditto.

Fri Aug 29 11:04:03 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_compatible): ASCII compatible string and US-ASCII
	  regexp is compatible. [ruby-dev:36033]

	* string.c (rb_str_index_m): second argument is position of character.
	  by usa. [ruby-dev:36033]
